--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,22 @@ services:
     command: npm run dev
     ports:
       - 3000:3000
+    depends_on:
+      - db
+  db: 
+    image: mysql:5.7
+    restart: always
+    environment:
+      - MYSQL_DATABASE=hackathon-db
+      - MYSQL_USER=hackathon
+      - MYSQL_PASSWORD=hackathon_password
+      - MYSQL_ROOT_PASSWORD=hackathon_root_password
+    ports:
+      - 3306:3306
+    expose:
+      - 3306
+    volumes:
+      - ./db:/var/lib/mysql
+
+volumes:
+  db:
