--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "typeorm:create-migration": "npm run typeorm -- migration:create ./src/shared/database/migrations/$npm_config_name",
     "typeorm:run-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:run",
-    "typeorm:revert-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:revert"
+    "typeorm:revert-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:revert",
+    "typeorm:re-run": "npm run typeorm:revert-migration && npm run typeorm:run-migration"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
